--- a/.jshintrc
+++ b/.jshintrc
@@ -7,7 +7,7 @@
 	"immed": true,
 	"noarg": true,
 	"onevar": true,
-	"quotmark": "double",
+	"quotmark": false,
 	"smarttabs": true,
 	"trailing": true,
 	"unused": true,
